--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "~antd/dist/reset.css";
+@import "~antd-button-color/dist/css/style.css";
+
+.login-form {
+    max-width: 600px;
+    margin: 100px auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.login-form-forgot {
+    float: right;
+}
+
+.login-form-button {
+    width: 100%;
+}
+
+.login-form-button {
+    width: 100%;
+}
+
+.trigger {
+    padding: 0 24px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.trigger:hover {
+    color: #1890ff;
+}
+
+.site-layout .site-layout-background {
+    background: #fff;
+}
+
+.header-buttons {
+    float: right;
+    margin: 0 20px 0 0;
+}
+
+.table-buttons {
+    float: right;
+    margin: 0px 0.5em 0 0;
+}
+
+.image-container {
+    margin: 0 0 10px 0;
+    border: 1px solid #CCC;
+    padding: 10px;
+}
+
+.image-card-buttons {
+    margin: 0 10px 10px 0;
+}
+
+.rendition-container {
+    background: #fff;
+    padding: 10px;
+    margin: 7px 6px;
+    border: #d4d4d4 solid 1px;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    box-shadow: 0 2px 0 rgb(212 212 212);
+}
+
+.thumbnail-container {
+    margin: 0 0 2em 0;
+
+}
+
+.article-event {
+    margin: 0 0 10px 0;
+    border: 1px solid #CCC;
+    padding: 10px;
+}
+
+.article-authors {
+    margin: 0 0 1rem 0;
+
+    width: 50%;
 }
